# ThUnmpy

./: LICENSE  README.md  Thunmpy-0.0.1-py3-none-any.whl  setup.cfg
src/Thunmpy/: Methods.py  ThunmFit.py  Thunmcorr.py
src/Thunmpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Custom_functions.ipynb  Pre-defined_functions.ipynb
tests/Images/: Albedo_100m  Albedo_100m.hdr  Albedo_100m.img  Albedo_20m  Albedo_20m.hdr  Albedo_20m.img  Class_100m  Class_100m.hdr  Class_100m.img  Class_20m  Class_20m.hdr  Class_20m.img  LST_100m  LST_100m.hdr  LST_100m.img  LST_20m  LST_20m.hdr  LST_20m.img  NDBI_100m  NDBI_100m.hdr  NDBI_100m.img  NDBI_20m  NDBI_20m.hdr  NDBI_20m.img
