[metadata]
name = Thunmpy
version = 0.0.1
author = C. Granero Belinchon
author_email = carlos.granero-belinchon@imt-atlantique.fr
description = Thunmpy is a python library containing several sharpening functions for Land Surface Temperature images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
